--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="./styles.css" />
+		<!-- <link rel="stylesheet" href="./styles.css" /> -->
 		<title>Tree Link</title>
 	</head>
 	<body>
